[package]
name = "pdf_form"
version = "0.4.0"
authors = ["Jake <jsandler18@gmail.com>", "Malte <voos.malte@gmail.com>", "Emulator000 <emulator@hotmail.it>"]
readme = "README.md"
keywords = ["pdf", "form"]
description = "A library for programatically filling out pdf forms"
license = "MIT"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
chrono.workspace = true
derive-error = "0.0.5"
lopdf = "0.36.0"

